--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "bootstrap-select",
-  "title": "bootstrap-select",
+  "name": "@pf3/select",
   "main": "dist/js/bootstrap-select.js",
   "description": "Bootstrap-select is a jQuery plugin that utilizes Bootstrap's dropdown.js to style and bring additional functionality to standard select elements.",
   "version": "1.12.4",
@@ -36,7 +35,7 @@
     "url": "git://github.com/silviomoreto/bootstrap-select.git"
   },
   "license": "MIT",
-  "dependencies": {
+  "peerDependencies": {
     "jquery": ">=1.8"
   },
   "devDependencies": {
